# rust-integ-test-example

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: first_tests.rs  lib.rs  second_tests.rs
