[package]
name = "rust-integ-test"
version = "0.1.0"
edition = "2021"

autotests = false

[lib]
name = "rust_integ_test"
path = "src/lib.rs"

[[bin]]
name = "rust-integ-test-executable"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
static_init = "1.0.3"

[[test]]
name = "integration"
path = "tests/lib.rs"